library/database_universe/test/errors/id/missing.dart
// no id property defined

import 'package:database_universe/database_universe.dart';

@collection
class Test {
  late int notId;

  late String name;
}
